Got some basics in for the different screens
Created a placeholder storage system while that's completed (GlobalStore.js)
Fixed gulpfile issues with sass compile
Added comments for increased awesomeness

--- a/src/styles/components/_new-game.scss
+++ b/src/styles/components/_new-game.scss
@@ -1,6 +1,6 @@
-.form {
+.new-game {
 
-  &__field-wrapper {
+  &__field {
     margin: 0 1em;
   }
 
@@ -19,10 +19,6 @@
     padding: .4em .6em;
     border: 1px solid #ccc;
     font-size: 1.2em;
-  }
-
-  .form__actions-wrapper {
-    text-align: right;
   }
 
 }
